--- a/tasks/server.yml
+++ b/tasks/server.yml
@@ -16,5 +16,13 @@
 - include: ca_local_certs.yml
   with_items: '{{gridftp_ca_local_certs}}'
 
+- name: Install host certificate
+  copy: content='{{gridftp_host_cert}}' dest=/etc/grid-security/hostcert.pem owner=root group=root mode=0644
+  when: ansible_env['SUDO_USER'] != 'vagrant'
+
+- name: Install host certificate
+  copy: content='{{gridftp_host_key}}' dest=/etc/grid-security/hostkey.pem owner=root group=root mode=0400
+  when: ansible_env['SUDO_USER'] != 'vagrant'
+
 - name: Enable service
   service: name=globus-gridftp-server state=started enabled=yes
