--- a/tasks/server.yml
+++ b/tasks/server.yml
@@ -26,3 +26,6 @@
 
 - name: Enable service
   service: name=globus-gridftp-server state=started enabled=yes
+
+- name: Update grid-mapfile
+  template: dest=/etc/grid-security/grid-mapfile src=grid-mapfile.j2 owner=root group=root mode=0644
