--- a/tasks/server.yml
+++ b/tasks/server.yml
@@ -18,11 +18,11 @@
 
 - name: Install host certificate
   copy: content='{{gridftp_host_cert}}' dest=/etc/grid-security/hostcert.pem owner=root group=root mode=0644
-  when: ansible_env['SUDO_USER'] != 'vagrant'
+  when: gridftp_host_cert | default()
 
 - name: Install host certificate
   copy: content='{{gridftp_host_key}}' dest=/etc/grid-security/hostkey.pem owner=root group=root mode=0400
-  when: ansible_env['SUDO_USER'] != 'vagrant'
+  when: gridftp_host_key | default()
 
 - name: Enable service
   service: name=globus-gridftp-server state=started enabled=yes
