Install local CA certs to clients if defined

--- a/tasks/client.yml
+++ b/tasks/client.yml
@@ -9,3 +9,6 @@
 
 - include: ca_cert_repos.yml
   with_items: '{{gridftp_ca_cert_repos}}'
+
+- include: ca_local_certs.yml
+  with_items: '{{gridftp_ca_local_certs}}'
