--- a/tasks/client.yml
+++ b/tasks/client.yml
@@ -7,6 +7,12 @@
 - name: Set environment variable for port rage
   lineinfile: dest=/etc/environment regexp='GLOBUS_TCP_PORT_RANGE' line='GLOBUS_TCP_PORT_RANGE={{gridftp_tcp_port_range | replace("-", ",")}}'
 
+- name: Open firewall
+  firewalld: port={{item}} permanent=true state=enabled
+  with_items:
+    - '{{gridftp_tcp_port_range}}/tcp'
+  when: firewalld_st.rc == 0
+
 - include: ca_cert_repos.yml
   with_items: '{{gridftp_ca_cert_repos}}'
 
