--- a/tasks/server.yml
+++ b/tasks/server.yml
@@ -10,6 +10,14 @@
   template: dest=/etc/gridftp.conf src=gridftp.conf.j2 mode=0644
   notify: Restart gridftp
 
+- name: Open firewall
+  firewalld: port={{item}} permanent=true state=enabled
+  with_items:
+    - 22/tcp
+    - 2811/tcp
+    - '{{gridftp_tcp_port_range}}/tcp'
+  when: firewalld_st.rc == 0
+
 - include: ca_cert_repos.yml
   with_items: '{{gridftp_ca_cert_repos}}'
 
