--- a/tasks/ca_local_certs.yml
+++ b/tasks/ca_local_certs.yml
@@ -3,6 +3,10 @@
   copy: dest=/etc/grid-security/certificates/{{item.name}}.pem content='{{item.cert}}' mode=0644
   when: item.cert is defined
 
+- name: Drop CA {{item.name}} certificate from file
+  copy: dest=/etc/grid-security/certificates/{{item.name}}.pem src={{item.cert_file}} mode=0644
+  when: item.cert_file is defined
+
 - name: Generate {{item.name}} signing policy
   template: dest=/etc/grid-security/certificates/{{item.name}}.signing_policy src=ca_cert.signing_policy.j2 mode=0644
 
