--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -14,3 +14,8 @@
 - include: client.yml
   when: gridftp_mode == 'client'
 
+- include: ca_cert_repos.yml
+  with_items: '{{gridftp_ca_cert_repos}}'
+
+- include: ca_local_certs.yml
+  with_items: '{{gridftp_ca_local_certs}}'
