--- a/tasks/ca_local_certs.yml
+++ b/tasks/ca_local_certs.yml
@@ -1,14 +1,14 @@
 ---
 - name: Drop CA {{item.name}} certificate
-  copy: dest=/etc/grid-security/certificates/{{item.name}}.pem content='{{item.cert}}' mode=0644
+  copy: dest=/etc/grid-security/certificates/{{item.name}}.pem content='{{item.cert}}' owner=root group=root mode=0644
   when: item.cert is defined
 
 - name: Drop CA {{item.name}} certificate from file
-  copy: dest=/etc/grid-security/certificates/{{item.name}}.pem src={{item.cert_file}} mode=0644
+  copy: dest=/etc/grid-security/certificates/{{item.name}}.pem src={{item.cert_file}} owner=root group=root mode=0644
   when: item.cert_file is defined
 
 - name: Generate {{item.name}} signing policy
-  template: dest=/etc/grid-security/certificates/{{item.name}}.signing_policy src=ca_cert.signing_policy.j2 mode=0644
+  template: dest=/etc/grid-security/certificates/{{item.name}}.signing_policy src=ca_cert.signing_policy.j2 owner=root group=root mode=0644
 
 - name: Calculate hash for CA certificate {{item.name}}
   shell: openssl x509 -hash -noout -in /etc/grid-security/certificates/{{item.name}}.pem
