--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,6 +7,7 @@
   register: firewalld_st
   ignore_errors: true
   changed_when: false
+  check_mode: no
 
 - include: server.yml
   when: gridftp_mode == 'server'
